[package]
name = "milcheck"
version = "0.1.3"
authors = ["pierre <dommerc.pierre@gmail.com>"]
license = "MPL-2.0"
edition = "2018"
description = "A small binary to display status of the pacman mirrorlist in the terminal"
repository = "https://github.com/doums/milcheck"
readme = "README.md"
keywords = ["archlinux", "pacman", "mirror", "mirrorlist"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5.3"
