[package]
name = "milcheck"
version = "0.2.6"
authors = ["pierre <dommerc.pierre@gmail.com>"]
license = "MPL-2.0"
edition = "2018"
description = "A simple program that displays the status of your pacman mirrorlist and the Arch Linux lastest news right in your terminal"
repository = "https://github.com/doums/milcheck"
readme = "README.md"
keywords = ["archlinux", "pacman", "mirror", "mirrorlist"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5.6"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12.0"
html2text = "0.2.1"
