[package]
name = "milcheck"
version = "0.3.0"
authors = ["Pierre D. <dommerc.pierre@gmail.com>"]
license = "MPL-2.0"
edition = "2021"
description = "A simple CLI that displays the status of your pacman mirrorlist and the Arch Linux latest news right in the terminal"
repository = "https://github.com/doums/milcheck"
readme = "README.md"
keywords = ["archlinux", "pacman", "mirror", "mirrorlist"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5.6"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13.0"
html2text = "0.4"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
